Refactor to work with Java 8 class path